tests/compile-pass/address_of_safe.lm
fn main() {
  let x: I32 = 1;
  let p = &x;
  let _q = p;
}
