tests/compile-fail/dot_trait_method_rejected.lm
trait T {
  fn f(x: Self) -> I32;
}

impl T for I32 {
  fn f(x: I32) -> I32 { x }
}

fn main() {
  let x: I32 = 1;
  let _y = x.f();
}
